--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 1.x
                 <ul>
                     <li><a href="./whicher-1.1/index.html">1.1</a></li>
+                    <li><a href="./whicher-1.2/index.html">1.2</a></li>
                 </ul>
             </li>
         </ul>
